Updated link in title-card to Github repository,

--- a/app/views/partials/title-card.hbs
+++ b/app/views/partials/title-card.hbs
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="uk-card uk-card-small uk-text-center uk-padding-remove">
-      <a target="_blank" href="https://github.com/cathalohinse?tab=repositories">
+      <a target="_blank" href="https://github.com/cathalohinse/Secure-Web-App">
         <div>
           <i class="fas fa-donate fa-3x" style="color:rgb(95, 96, 173)" title="Source repo" pos="bottom" uk-tooltip></i>
         </div>
