Tidied up code, and added in parts from assignment that I had originally used only on the aiteanna-speisiula app.

--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -14,13 +14,13 @@
         <form action="/signup" method="POST">
           <div class="uk-margin">
             <div class="uk-inline uk-width-1-1">
-              <span class="uk-form-icon" uk-icon="icon: user"></span> <input class="uk-input uk-form-large" type="text"
+              <span class="uk-form-icon" uk-icon="icon: user"></span> <input class="uk-input uk-form-large" type="text" maxlength="8"
                                                                              name="firstName">
             </div>
           </div>
           <div class="uk-margin">
             <div class="uk-inline uk-width-1-1">
-              <span class="uk-form-icon" uk-icon="icon: user"></span> <input class="uk-input uk-form-large" type="text"
+              <span class="uk-form-icon" uk-icon="icon: user"></span> <input class="uk-input uk-form-large" type="text" maxlength="8"
                                                                              name="lastName">
             </div>
           </div>
